fix(a11y): Prevent horizontal scroll on smaller screens (#19205)

--- a/feature-libs/cart/base/styles/components/_added-to-cart-dialog.scss
+++ b/feature-libs/cart/base/styles/components/_added-to-cart-dialog.scss
@@ -84,6 +84,16 @@
         }
       }
 
+      @include forFeature('a11yPreventHorizontalScroll') {
+        .cx-quantity {
+          @include media-breakpoint-down(xs) {
+            flex-direction: column;
+            align-items: start;
+            gap: 5px;
+          }
+        }
+      }
+
       .cx-actions {
         justify-content: flex-start;
       }
